updated typeresolver to 0.6.3, travis and dependecies. moved to hamcrest 2.2