@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-2018 the original author or authors.
+ * Copyright 2002-2021 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -16,14 +16,16 @@
 
 package _shaded.net.jodah.typetools;
 
-import sun.misc.Unsafe;
-
+import java.lang.invoke.MethodHandle;
+import java.lang.invoke.MethodHandles;
 import java.lang.ref.Reference;
 import java.lang.ref.WeakReference;
 import java.lang.reflect.*;
 import java.security.AccessController;
 import java.security.PrivilegedExceptionAction;
 import java.util.*;
+
+import sun.misc.Unsafe;
 
 /**
  * Enhanced type resolution utilities.
@@ -37,6 +39,7 @@ public final class TypeResolver {
       .synchronizedMap(new WeakHashMap<Class<?>, Reference<Map<TypeVariable<?>, Type>>>());
   private static volatile boolean CACHE_ENABLED = true;
   private static boolean RESOLVES_LAMBDAS;
+  private static Object JAVA_LANG_ACCESS;
   private static Method GET_CONSTANT_POOL;
   private static Method GET_CONSTANT_POOL_SIZE;
   private static Method GET_CONSTANT_POOL_METHOD_AT;
@@ -48,7 +51,7 @@ public final class TypeResolver {
     JAVA_VERSION = Double.parseDouble(System.getProperty("java.specification.version", "0"));
 
     try {
-      Unsafe unsafe = AccessController.doPrivileged(new PrivilegedExceptionAction<Unsafe>() {
+      final Unsafe unsafe = AccessController.doPrivileged(new PrivilegedExceptionAction<Unsafe>() {
         @Override
         public Unsafe run() throws Exception {
           final Field f = Unsafe.class.getDeclaredField("theUnsafe");
@@ -58,29 +61,74 @@ public final class TypeResolver {
         }
       });
 
-      GET_CONSTANT_POOL = Class.class.getDeclaredMethod("getConstantPool");
+      Class<?> sharedSecretsClass;
+      AccessMaker accessSetter;
+      if (JAVA_VERSION < 9) {
+        sharedSecretsClass = Class.forName("sun.misc.SharedSecrets");
+        // Java 8 and lower can simply call setAccessible
+        accessSetter = new AccessMaker() {
+          @Override
+          public void makeAccessible(AccessibleObject accessibleObject) {
+            accessibleObject.setAccessible(true);
+          }
+        };
+      } else if (JAVA_VERSION < 12) {
+          try {
+            sharedSecretsClass = Class.forName("jdk.internal.misc.SharedSecrets");
+          } catch (ClassNotFoundException e) {
+            // In Oracle JDK 11.0.6, SharedSecrets was moved from jdk.internal.misc to jdk.internal.access.
+            sharedSecretsClass = Class.forName("jdk.internal.access.SharedSecrets");
+          }
+          // access control got strengthed in Java 9, but can be circumvented with Unsafe.
+          Field overrideField = AccessibleObject.class.getDeclaredField("override");
+          final long overrideFieldOffset = unsafe.objectFieldOffset(overrideField);
+          accessSetter = new AccessMaker() {
+            @Override
+            public void makeAccessible(AccessibleObject accessibleObject) {
+              unsafe.putBoolean(accessibleObject, overrideFieldOffset, true);
+            }
+        };
+      } else {
+          sharedSecretsClass = Class.forName("jdk.internal.access.SharedSecrets");
+          // In Java 12, AccessibleObject.override was added to the reflection blacklist.
+          // Access checking can still be circumvented by using the Unsafe technique to get the implementation lookup from MethodHandles.
+          Field implLookupField = MethodHandles.Lookup.class.getDeclaredField("IMPL_LOOKUP");
+          long implLookupFieldOffset = unsafe.staticFieldOffset(implLookupField);
+          Object lookupStaticFieldBase = unsafe.staticFieldBase(implLookupField);
+          MethodHandles.Lookup implLookup = (MethodHandles.Lookup) unsafe.getObject(lookupStaticFieldBase, implLookupFieldOffset);
+          final MethodHandle overrideSetter = implLookup.findSetter(AccessibleObject.class, "override", boolean.class);
+          accessSetter = new AccessMaker() {
+            @Override
+            public void makeAccessible(AccessibleObject object) throws Throwable {
+              overrideSetter.invokeWithArguments(new Object[] {object, true});
+            }
+        };
+      }
+      Method javaLangAccessGetter = sharedSecretsClass.getMethod("getJavaLangAccess");
+      accessSetter.makeAccessible(javaLangAccessGetter);
+      JAVA_LANG_ACCESS = javaLangAccessGetter.invoke(null);
+      GET_CONSTANT_POOL = JAVA_LANG_ACCESS.getClass().getMethod("getConstantPool", Class.class);
+
       String constantPoolName = JAVA_VERSION < 9 ? "sun.reflect.ConstantPool" : "jdk.internal.reflect.ConstantPool";
       Class<?> constantPoolClass = Class.forName(constantPoolName);
       GET_CONSTANT_POOL_SIZE = constantPoolClass.getDeclaredMethod("getSize");
       GET_CONSTANT_POOL_METHOD_AT = constantPoolClass.getDeclaredMethod("getMethodAt", int.class);
 
       // setting the methods as accessible
-      Field overrideField = AccessibleObject.class.getDeclaredField("override");
-      long overrideFieldOffset = unsafe.objectFieldOffset(overrideField);
-      unsafe.putBoolean(GET_CONSTANT_POOL, overrideFieldOffset, true);
-      unsafe.putBoolean(GET_CONSTANT_POOL_SIZE, overrideFieldOffset, true);
-      unsafe.putBoolean(GET_CONSTANT_POOL_METHOD_AT, overrideFieldOffset, true);
+      accessSetter.makeAccessible(GET_CONSTANT_POOL);
+      accessSetter.makeAccessible(GET_CONSTANT_POOL_SIZE);
+      accessSetter.makeAccessible(GET_CONSTANT_POOL_METHOD_AT);
 
       // additional checks - make sure we get a result when invoking the Class::getConstantPool and
       // ConstantPool::getSize on a class
-      Object constantPool = GET_CONSTANT_POOL.invoke(Object.class);
+      Object constantPool = GET_CONSTANT_POOL.invoke(JAVA_LANG_ACCESS, Object.class);
       GET_CONSTANT_POOL_SIZE.invoke(constantPool);
 
       for (Method method : Object.class.getDeclaredMethods())
         OBJECT_METHODS.put(method.getName(), method);
 
       RESOLVES_LAMBDAS = true;
-    } catch (Exception ignore) {
+    } catch (Throwable ignore) {
     }
 
     Map<Class<?>, Class<?>> types = new HashMap<Class<?>, Class<?>>();
@@ -94,6 +142,10 @@ public final class TypeResolver {
     types.put(short.class, Short.class);
     types.put(void.class, Void.class);
     PRIMITIVE_WRAPPERS = Collections.unmodifiableMap(types);
+  }
+
+  private interface AccessMaker {
+    void makeAccessible(AccessibleObject object) throws Throwable;
   }
 
   /** An unknown type. */
@@ -385,55 +437,46 @@ public final class TypeResolver {
     else if (genericType instanceof Class<?>)
       return genericType;
     else
-      return reify(genericType, typeVariableTypeMap, new HashMap<Type, Type>());
+      return reify(genericType, typeVariableTypeMap, new HashMap<ParameterizedType, ReifiedParameterizedType>());
   }
 
   /**
    * Works like {@link #resolveRawClass(Type, Class, Class)} but does not stop at raw classes. Instead, traverses
    * referenced types.
    *
-   * @param cache contains a mapping of generic types to reified types. A value of {@code null} inside a
+   * @param partial contains a mapping of generic types to reified types. A value of {@code null} inside a
    *        {@link ReifiedParameterizedType} instance means that this type is currently being reified.
    */
-  private static Type reify(Type genericType, final Map<TypeVariable<?>, Type> typeVariableMap, Map<Type, Type> cache) {
+  private static Type reify(Type genericType, final Map<TypeVariable<?>, Type> typeVariableMap, Map<ParameterizedType, ReifiedParameterizedType> partial) {
     // Terminal case.
     if (genericType instanceof Class<?>)
       return genericType;
 
-    // For cycles of length larger than one, find its last element by chasing through cache.
-    while (cache.containsKey(genericType)) {
-      genericType = cache.get(genericType);
-    }
-
     // Recursive cases.
     if (genericType instanceof ParameterizedType) {
       final ParameterizedType parameterizedType = (ParameterizedType) genericType;
-      final Type[] genericTypeArguments =  parameterizedType.getActualTypeArguments();
-      final Type[] reifiedTypeArguments = new Type[genericTypeArguments.length];
-
-      ReifiedParameterizedType result = new ReifiedParameterizedType(parameterizedType);
-      cache.put(genericType, result);
-
-      boolean changed = false;
-      for (int i = 0; i < genericTypeArguments.length; i++) {
-        // Cycle detection. In case a genericTypeArgument is null, it is currently being resolved,
-        // thus there's a cycle in the type's structure.
-        if (genericTypeArguments[i] == null) {
-          return parameterizedType;
-        }
-        reifiedTypeArguments[i] = reify(genericTypeArguments[i], typeVariableMap, cache);
-        changed = changed || (reifiedTypeArguments[i] != genericTypeArguments[i]);
+      // Self-referential type needs special attention. Otherwise we might accidentally overflow the stack.
+      if (partial.containsKey(parameterizedType)) {
+        ReifiedParameterizedType res = partial.get(genericType);
+        res.addReifiedTypeArgument(res);
+        return res;
       }
-
-      if (!changed)
-        return parameterizedType;
-
-      result.setReifiedTypeArguments(reifiedTypeArguments);
+      final Type[] genericTypeArguments =  parameterizedType.getActualTypeArguments();
+      final ReifiedParameterizedType result = new ReifiedParameterizedType(parameterizedType);
+      partial.put(parameterizedType, result);
+      for (Type genericTypeArgument : genericTypeArguments) {
+        Type reified = reify(genericTypeArgument, typeVariableMap, partial);
+        // Self-references are added as soon as they are detected, see above.
+        // In this case, skip adding.
+        if (reified != result) {
+          result.addReifiedTypeArgument(reified);
+        }
+      }
       return result;
     } else if (genericType instanceof GenericArrayType) {
       final GenericArrayType genericArrayType = (GenericArrayType) genericType;
       final Type genericComponentType = genericArrayType.getGenericComponentType();
-      final Type reifiedComponentType = reify(genericArrayType.getGenericComponentType(), typeVariableMap, cache);
+      final Type reifiedComponentType = reify(genericArrayType.getGenericComponentType(), typeVariableMap, partial);
 
       if (genericComponentType == reifiedComponentType)
         return genericComponentType;
@@ -447,36 +490,26 @@ public final class TypeResolver {
     } else if (genericType instanceof TypeVariable<?>) {
       final TypeVariable<?> typeVariable = (TypeVariable<?>) genericType;
       final Type mapping = typeVariableMap.get(typeVariable);
-      if (mapping != null) {
-        cache.put(typeVariable, mapping);
-        return reify(mapping, typeVariableMap, cache);
-      }
-
-      final Type[] upperBounds = typeVariable.getBounds();
-
-      // Copy cache in case the bound is mutually recursive on the variable. This is to avoid sharing of
-      // cache in different branches of the call-graph of reify.
-      cache = new HashMap<Type, Type>(cache);
-
+      if (mapping != null)
+        return reify(mapping, typeVariableMap, partial);
       // NOTE: According to https://docs.oracle.com/javase/tutorial/java/generics/bounded.html
       // if there are multiple upper bounds where one bound is a class, then this must be the
-      // leftmost/first bound. Therefore we blindly take this one, hoping is the most relevant.
+      // leftmost/first bound. Therefore we blindly take this one, hoping it is the most relevant.
       // Hibernate does the same when erasing types, see also
       // https://github.com/hibernate/hibernate-validator/blob/6.0/engine/src/main/java/org/hibernate/validator/internal/util/TypeHelper.java#L181-L186
-      cache.put(typeVariable, upperBounds[0]);
-      return reify(upperBounds[0], typeVariableMap, cache);
+      return reify(typeVariable.getBounds()[0], typeVariableMap, partial);
     } else if (genericType instanceof WildcardType) {
       final WildcardType wildcardType = (WildcardType) genericType;
       final Type[] upperBounds = wildcardType.getUpperBounds();
       final Type[] lowerBounds = wildcardType.getLowerBounds();
       if (upperBounds.length == 1 && lowerBounds.length == 0)
-        return reify(upperBounds[0], typeVariableMap, cache);
+        return reify(upperBounds[0], typeVariableMap, partial);
 
       throw new UnsupportedOperationException(
-          "Attempted to reify wildcard type with name '" + wildcardType + "' which has " +
-          upperBounds.length + " upper bounds and " + lowerBounds.length + " lower bounds. " +
-          "Reification of wildcard types is only supported for " +
-          "the trivial case of exactly one upper bound and no lower bounds.");
+          "Attempted to reify wildcard type with name '" + wildcardType.getTypeName() +
+          "' which has " + upperBounds.length + " upper bounds and " + lowerBounds.length +
+          " lower bounds. Reification of wildcard types is only supported for" +
+          " the trivial case of exactly 1 upper bound and 0 lower bounds.");
     }
     throw new UnsupportedOperationException(
         "Reification of type with name '" + genericType.getTypeName() + "' and " +
@@ -704,7 +737,7 @@ public final class TypeResolver {
   private static Member[] extractConstantPoolMethods(Class<?> type) {
     Object constantPool;
     try {
-      constantPool = GET_CONSTANT_POOL.invoke(type);
+      constantPool = GET_CONSTANT_POOL.invoke(JAVA_LANG_ACCESS, type);
     } catch (Exception ignore) {
       return new Member[0];
     }
